<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".meetcoach">
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="Meet with a Coach 1:1"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/mc1"
        android:textColor="#000000"
        android:textSize="17dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/mc2"
        android:textColor="#000000"
        android:textSize="17dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:text="@string/mc3"
        android:textColor="#000000"
        android:textSize="17dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:text="@string/mc4"
        android:textColor="#000000"
        android:textSize="17dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:text="@string/mc5"
        android:textColor="#000000"
        android:textSize="17dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginLeft="20dp"
    android:text="@string/mc6"
    android:textColor="#000000"
    android:textSize="17dp"
    android:fontFamily="@font/nunito_sans"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginLeft="20dp"
    android:text="@string/mc7"
    android:textColor="#000000"
    android:textSize="17dp"
    android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:text="@string/mc8"
        android:textColor="#000000"
        android:textSize="17dp"
        android:fontFamily="@font/nunito_sans"/>
    <EditText
        android:id="@+id/meeted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your brief message here..."
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:fontFamily="@font/nunito_sans"/>

    <Button
        android:id="@+id/customDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ed"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:padding="10dp"
        android:text="Continue"
        android:textSize="17dp" />




</LinearLayout>