<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrivacyPolicy">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
    android:id="@+id/tv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:text="Privacy Policy"
    android:textColor="#000000"
    android:textStyle="bold"
    android:textSize="26dp"
    android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="Effective date: April 16th 2023"
        android:textSize="16dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/para1"
        android:textSize="16dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/para2"
        android:textSize="16dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/para3"
        android:textSize="16dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/para4"
        android:textSize="16dp"
        android:fontFamily="@font/nunito_sans"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="What this Privacy Policy Covers"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="25dp"
        android:fontFamily="@font/nunito_sans"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/para5"
        android:textSize="16dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/nunito_sans"/>
    </LinearLayout>

</ScrollView>